--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,10 +3,16 @@ body {
   background-color: #1a1a1a;
   font-family: 'Roboto', sans-serif;
   min-height: 100vh;
+  width: 100%;
+}
+
+#root {
+  width: 100%;
+  display: block;
 }
 
 main {
-  padding-top: 80px;
+  padding-top: 20px;
   color: #fff;
   text-align: center;
   display: flex;
