add navigation and improve header styling

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,29 +1,72 @@
 .site-header {
-  padding: 20px;
+  padding: 50px;
   display: flex;
   justify-content: center;
   width: 100%;
 }
 
+.header-content {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+}
+
 .portfolio-title {
   margin: 0;
   color: #fff;
-  font-size: 9rem;
+  font-size: 10rem;
   font-weight: 700;
   font-family: 'Roboto', sans-serif;
-  transition: text-shadow 0.5s ease-in-out, color 0.5s ease-in-out;
-  text-shadow: 0 0 2px rgba(255, 255, 255, 0.3);
   text-decoration: none;
+  transition: color 0.3s ease;
 }
 
 .portfolio-title:hover {
+  color: orange;
+}
+
+.github-link {
+  margin-top: 10px;
   color: #fff;
-  text-shadow:
-    0 0 5px rgba(255, 255, 255, 1),
-    0 0 10px rgba(255, 255, 255, 0.8),
-    0 0 20px rgba(255, 235, 153, 0.7),
-    0 0 30px rgba(255, 204, 0, 0.6),
-    0 0 50px rgba(255, 153, 0, 0.5),
-    0 0 80px rgba(255, 102, 0, 0.4),
-    0 0 120px rgba(255, 51, 0, 0.3);
+  font-size: 4rem;
+  font-family: 'Roboto', sans-serif;
+  text-decoration: underline;
+  transition: color 0.3s ease;
+}
+
+.github-link:hover {
+  color: orange;
+}
+
+.header-separator {
+  width: 30%;
+  height: 1px;
+  background-color: #fff;
+  margin-top: 150px;
+  margin-bottom: 50px;
+  align-self: flex-end;
+}
+
+.header-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 50%;
+  align-self: flex-end;
+  align-items: flex-end;
+  margin-top: 10px;
+}
+
+.nav-button {
+  color:#fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 5rem;
+  font-weight: 500;
+  text-decoration: none;
+  padding: 5px 10px;
+  transition: color 0.3s ease;
+}
+
+.nav-button:hover {
+  color: yellow;
 }
