--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -70,3 +70,40 @@
 .nav-button:hover {
   color: yellow;
 }
+
+/* mobile overrides */
+@media (max-width: 768px) {
+  .site-header {
+    padding-top: 100px;
+    flex-direction: column;
+    align-items: center;
+  }
+  .portfolio-title {
+    font-size: 4rem;
+    text-align: center;
+    line-height: 1.1;
+  }
+
+  .github-link {
+    font-size: 1.5rem;
+    margin-top: 15px;
+  }
+
+  .header-nav {
+    width: 100%;
+    align-items: center;
+    align-self: center;
+    margin-top: 40px;
+  }
+
+  .nav-button {
+    font-size: 2rem;
+  }
+
+  .header-separator {
+    width: 80%;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    align-self: center;
+  }
+}
