--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -75,25 +75,43 @@
 @media (max-width: 768px) {
   .site-header {
     padding-top: 100px;
+    display: flex;
     flex-direction: column;
-    align-items: center;
   }
+
+  .header-content {
+    width: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
+  }
+
   .portfolio-title {
     font-size: 4rem;
-    text-align: center;
+    text-align: left;
     line-height: 1.1;
+    align-self: flex-start;
   }
 
   .github-link {
     font-size: 1.5rem;
     margin-top: 15px;
+    align-self: flex-start;
+  }
+
+  .header-separator {
+    width: 80%;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    align-self: center;
   }
 
   .header-nav {
     width: 100%;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     align-self: center;
-    margin-top: 40px;
   }
 
   .nav-button {
